@@ -4,6 +4,7 @@ lib/Math/Prime/Util/MemFree.pm
 lib/Math/Prime/Util/PrimeArray.pm
 lib/Math/Prime/Util/PP.pm
 lib/Math/Prime/Util/ZetaBigFloat.pm
+lib/Math/Prime/Util/EllipticCurve.pm
 LICENSE
 Makefile.PL
 MANIFEST
