@@ -76,7 +76,7 @@ plan tests =>  0
              + scalar(keys %allfactors)
              + 5   # moebius, euler_phi, jordan totient
              + 15  # random primes
-             + 3   # verify_prime
+             + 5   # verify_prime
              + 0;
 
 # Using GMP makes these tests run about 2x faster on some machines
@@ -294,6 +294,15 @@ sub check_pcbounds {
 # Provable primes
 {
   my @proof;
+
+  @proof = (20907001, "Pratt", [ 2,
+                                 3,
+                                 5,
+                                 [23,"Pratt",[2,[11,"Pratt",[2,5],2]],5],
+                                 [101, "Pratt", [2, 5], 2],
+                               ], 14 );
+  ok( verify_prime(@proof), "simple Lucas/Pratt proof verified" );
+
   @proof = ('3364125245431456304736426076174232972735419017865223025179282077503701', 'n-1',
     [2,5,127, ['28432789963853652887491983185920687231739655787', 'n-1',
                 [ 2,3,163,650933, [ '44662634059309451871488121651101494489', 'n-1',
@@ -304,7 +313,7 @@ sub check_pcbounds {
               ],
               '9316417838190714313' ],
     [ 2, 2, 2, 2, 2 ]);
-  ok( verify_prime(@proof), "simple proof verified" );
+  ok( verify_prime(@proof), "simple n-1 proof verified" );
 
   @proof = ('6864797660130609714981900799081393217269435300143305409394463459185543183397656052122559640661454554977296311391480858037121987999716643812574028291115057151', 'n-1',
   [ 2,3,5,11,17,31,41,53,131,157,521,1613,61681,8191,42641,858001,51481, '7623851', '308761441' ],
@@ -320,4 +329,6 @@ sub check_pcbounds {
   [ 3,5,3,2,3,3,3,3 ] );
   ok( verify_prime(@proof), "2**607-1 primality proof verified" );
 
+  @proof = ('677826928624294778921',"AKGM", [677826928624294778921, 404277700094248015180, 599134911995823048257, 677826928656744857936, 104088901820753203, [2293544533, 356794037129589115041]], [104088901820753203, 0, 73704321689372825, 104088902465395836, 1112795797, [3380482019, 53320146243107032]], [1112795797, 0, 638297481, 1112860899, 39019, [166385704, 356512285]]);
+  ok( verify_prime(@proof), "ECPP primality proof of 677826928624294778921 verified" );
 }
